# lego-ranking-app

./: .dockeringore  .env  .env.sample  .gitignore  README.md  compose.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  run.py
.github/workflows/: backend.yml  deploy.yml  frontend.yml
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  entrypoint.sh  pyproject.toml  requirements.txt
backend/api/: __init__.py  admin.py  apps_admin.py  celery.py  filters.py  models.py  scraper.py  serializers.py  settings.py  tasks.py  urls.py  utils.py  views.py
backend/api/migrations/: 0001_initial.py  0002_remove_legoset_img_src_legoset_img.py
backend/core/: admin.py  apps_admin.py  celery.py  settings.py  urls.py
backend/legoscraper/: apps.py  filters.py  scraper.py  serializers.py  tasks.py  urls.py  views.py
backend/legoscraper/migrations/: 0001_initial.py
backend/legoscraper/tests/: test_legosets_api.py  test_models.py  test_scraper.py  test_tasks.py
frontend/: Dockerfile  Dockerfile.prod  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Filters.js  Footer.js  Header.js  LegoSet.js  Loading.js  Pagination.js  SearchBar.js  Select.js  Sorting.js  ThemeSelect.js  filters.tsx  inputs.tsx  lego-set.tsx  lego-sets-list.tsx  loading.tsx  navbar.tsx  pagination.tsx  sidebar.tsx  topsection.tsx
frontend/src/lib/: actions.ts  types.ts  utils.ts
nginx/: Dockerfile  nginx-setup.conf
(+150 files in other folders)
