[project]
name = "backend"
version = "1.0.0"
description = ""
authors = [
    {name = "pietrykovsky",email = "m.pietrykowski2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "markdown (>=3.7,<4.0)",
    "django-filter (>=24.3,<25.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "selenium (>=4.28.1,<5.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "django-celery-beat (>=2.7.0,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "django-cors-headers (>=4.6.0,<5.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120